bin/User/crash.log

==========================================================================================
2026-05-09T22:28:51.439611
Hauptdatei: C:\python\FiBu_mate.py
Traceback (most recent call last):
  File "C:\python\start_fibu_mate_debug.py", line 61, in main
    appmod = load_module_from_path("fibu_main", found)
  File "C:\python\start_fibu_mate_debug.py", line 35, in load_module_from_path
    loader.exec_module(mod)
    ~~~~~~~~~~~~~~~~~~^^^^^
  File "<frozen importlib._bootstrap_external>", line 755, in exec_module
  File "<frozen importlib._bootstrap_external>", line 893, in get_code
  File "<frozen importlib._bootstrap_external>", line 823, in source_to_code
  File "<frozen importlib._bootstrap>", line 491, in _call_with_frames_removed
  File "C:\python\FiBu_mate.py", line 781
    messagebox.showerror('FiBu Mate', f"Fehler beim Laden des Moduls:
                                      ^
SyntaxError: unterminated f-string literal (detected at line 781)

